Redid the homepage. Added nav bar. Added images. fleshed out css styles.

--- a/style.css
+++ b/style.css
@@ -1,22 +1,67 @@
 h1{
-  color: #45b0ea;
+  color: #2AD9E6;
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 60px;
 
 }
 
-nav{
-  color: #1F1D5A;
+.topNav {
+  background-color: #0E1C1F;
+  overflow: hidden;
+  /* padding-top: 30px;
+  padding-bottom: 30px; */
+
 
 }
 
-.largeHeader {
-  background-image: url(HeaderImgWNav.jpg);
-  height: 1080px;
-  width: 1920px;
-  background-color: aliceblue;
+.topNav a {
+  float: right;
+  color: aliceblue;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-right: 40px;
+}
+
+#logo {
+  float: left;
+  position: absolute;
+  text-align: center;
 
 }
+
+#logo {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  padding-left: 60px;
+  max-width: 400px;
+  min-width: 150px;
+}
+
+#lrgHeader {
+  background-image: url(InkBg.svg);
+  height: 500px;
+  width: 890px;
+  background-color: rgb(240, 248, 255);
+  position: relative;
+  text-align: right;
+
+}
+
+.topNav a:hover {
+  background-color: #2AD9E6;
+  color: #0E1C1F;
+}
+
+.topNav a.active{
+  background-color: #2AD9E6;
+  color: #0E1C1F;
+
+}
+
+
 
 .smallHeader {
   background-image: url(HeaderSmall.jpg);
@@ -27,26 +72,24 @@ nav{
 }
 
 
-#logo {
-  padding-top: 30px;
-  padding-left: 60px;
-  max-width: 400px;
-}
 
-nav {
-  padding-left: 60px;
+
+.welcome {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
 }
 
 
 h2{
-  color: #1F1D5A;
+  color: #0E1C1F;
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 60px;
 
 }
 
 h3{
-  color: #45b0ea;
+  color: #2AD9E6;
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 60px;
 
@@ -54,7 +97,7 @@ h3{
 
 p{
   font-family: Arial, Helvetica, sans-serif;
-  color: #1F1D5A;
+  color: #0E1C1F;
   padding-left: 60px;
   max-width: 600px;
   text-align: justify;
