--- a/style.css
+++ b/style.css
@@ -1,17 +1,38 @@
+:root {
+  --dark-tone: #0E1C1F;
+  --light-tone: #f2f2f2;
+  --highlight-color: #2AD9E6;
+  --white: #fefefe;
+}
+
+
+
+
+
 h1{
-  color: #2AD9E6;
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--highlight-color);
+  font-family: 'Archivo Black', sans-serif;
   padding-left: 60px;
+
 
 }
 
 .topNav {
-  background-color: #0E1C1F;
+  background-color: var(--dark-tone);
   overflow: hidden;
   /* padding-top: 30px;
   padding-bottom: 30px; */
 
 
+
+}
+
+.fa-bars{
+  color: var(--white);
+}
+
+nav{
+  padding-bottom: 10px;
 }
 
 .topNav a {
@@ -23,6 +44,7 @@ h1{
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   padding-right: 40px;
+
 }
 
 #logo {
@@ -42,8 +64,9 @@ h1{
 
 #lrgHeader {
   background-image: url(InkBg.svg);
-  height: 500px;
-  width: 890px;
+  height: 50vw;
+  width: 100%
+  background-size: contain;
   background-color: rgb(240, 248, 255);
   position: relative;
   text-align: right;
@@ -51,13 +74,13 @@ h1{
 }
 
 .topNav a:hover {
-  background-color: #2AD9E6;
-  color: #0E1C1F;
+  background-color: var(--highlight-color);
+  color: var(--dark-tone);
 }
 
 .topNav a.active{
-  background-color: #2AD9E6;
-  color: #0E1C1F;
+  background-color: var(--highlight-color);
+  color: var(--dark-tone);
 
 }
 
@@ -67,7 +90,7 @@ h1{
   background-image: url(HeaderSmall.jpg);
   height: 440px;
   width: 1920px;
-  background-color: aliceblue;
+  background-color: var(--light-tone);
 
 }
 
@@ -82,14 +105,14 @@ h1{
 
 
 h2{
-  color: #0E1C1F;
+  color: var(--dark-tone);
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 60px;
 
 }
 
 h3{
-  color: #2AD9E6;
+  color: var(--highlight-color);
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 60px;
 
@@ -97,8 +120,140 @@ h3{
 
 p{
   font-family: Arial, Helvetica, sans-serif;
-  color: #0E1C1F;
+  color: var(--dark-tone);
   padding-left: 60px;
   max-width: 600px;
   text-align: justify;
+}
+
+
+label {
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+
+
+input[type=text], select, textarea {
+  width: 50%;
+  padding: 12px;
+  border: 1px solid var(--highlight-color);
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+input[type=tel], select, textarea {
+  width: 50%;
+  padding: 12px;
+  border: 1px solid var(--highlight-color);
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+input[type=email], select, textarea {
+  width: 50%;
+  padding: 12px;
+  border: 1px solid var(--highlight-color);
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+input[type=submit] {
+  background-color: var(--highlight-color);
+  color: var(--dark-tone);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+}
+
+input[type=submit]:hover {
+  background-color: var(--dark-tone);
+  color: var(--highlight-color);
+}
+
+h5{
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--highlight-color);
+}
+
+.contactForm {
+
+  background-color: var(--light-tone);
+  padding: 20px;
+
+}
+
+
+@media (max-width:550px){
+
+  #lrgHeader {
+    background-image: url(InkBg.svg);
+
+    max-width: 400px;
+    background-color: var(--light-tone);
+    position: relative;
+    text-align: right;
+
+  }
+
+  h1{
+    color: var(--highlight-color);
+    font-family: 'Archivo Black', sans-serif;
+    padding-left: 60px;
+    font-size: 22px;
+
+  }
+
+  h2{
+    color: var(--dark-tone);
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 60px;
+    font-size: 15px;
+
+
+  }
+
+  h3{
+    color: var(--highlight-color);
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 60px;
+    font-size: 15px;
+
+  }
+
+  p{
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--dark-tone);
+    padding-left: 60px;
+    max-width: 600px;
+    text-align: justify;
+    font-size: 14px;
+  }
+
+
+  .hidden--mobile {
+    display: none;
+  }
+
+  nav{
+    padding-bottom: 50px;
+  }
+
+}
+
+@media (min-width: 550px) {
+  nav > .fa-bars {
+    display: none;
+  }
+
+
 }
