--- a/style.css
+++ b/style.css
@@ -3,19 +3,75 @@
   --light-tone: #f2f2f2;
   --highlight-color: #2AD9E6;
   --white: #fefefe;
+  --dark-blue: #18b5c0;
+}
+
+/* headings and paragraphs */
+
+.h3Padded{
+  padding-left: 60px;
+}
+
+#welcomeSH{
+  color: var(--dark-tone);
+  padding-right: 5%;
+
+
 }
 
 
 
-
-
 h1{
-  color: var(--highlight-color);
+  color: var(--white);
   font-family: 'Archivo Black', sans-serif;
   padding-left: 60px;
 
 
 }
+
+h2{
+  color: var(--dark-tone);
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 60px;
+
+}
+
+h3{
+  color: var(--highlight-color);
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 5%;
+
+
+
+}
+
+h5{
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--highlight-color);
+}
+
+p{
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--dark-tone);
+  padding-bottom: 3%;
+  max-width: 700px;
+  text-align: center;
+  margin: auto;
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+/* ============================================================================================= */
+
+hr{
+
+}
+
+.fa-bars{
+  color: var(--white);
+}
+
+/* Nav bar ===================================================================================== */
 
 .topNav {
   background-color: var(--dark-tone);
@@ -27,9 +83,19 @@ h1{
 
 }
 
-.fa-bars{
-  color: var(--white);
+/* .hMenu{
+  display: none;
+
+} */
+
+.links{
+  color: var(--highlight-color);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  padding-left: 60px;
 }
+
+
 
 nav{
   padding-bottom: 10px;
@@ -47,6 +113,27 @@ nav{
 
 }
 
+.hamburgerMenu{
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+
+header{
+  border-bottom: 1px solid var(--light-tone);
+}
+
+
+/* logo ======================================================================================== */
+
 #logo {
   float: left;
   position: absolute;
@@ -62,16 +149,50 @@ nav{
   min-width: 150px;
 }
 
+#welcomeLogo{
+  min-width: 70%;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+
+
+/* header image ================================================================================ */
+
 #lrgHeader {
   background-image: url(InkBg.svg);
-  height: 50vw;
-  width: 100%
+   height: 40vw;
+  /* width: 100%;  */
   background-size: contain;
   background-color: rgb(240, 248, 255);
   position: relative;
   text-align: right;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end:4;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+
 
 }
+
+.headerGrid{
+
+  display: grid;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 25% 25% 25% 25% ;
+  background-color: var(--highlight-color);
+
+
+}
+
+#headerSideBar {
+  grid-row-start: 2;
+
+}
+
 
 .topNav a:hover {
   background-color: var(--highlight-color);
@@ -84,13 +205,50 @@ nav{
 
 }
 
-
-
-.smallHeader {
-  background-image: url(HeaderSmall.jpg);
-  height: 440px;
-  width: 1920px;
+.centeredContent{
+  display: grid;
+  grid-template-columns: 1fr 75% 1fr;
+  grid-template-rows: 80px 1fr;
   background-color: var(--light-tone);
+  padding-bottom: 60px;
+}
+
+.centered{
+  grid-column-start: 2;
+  grid-row-start: 2;
+  background-color: var(--white);
+  padding-bottom: 70px;
+  /* padding-top: 50px; */
+  width: 1000px;
+  position: ;
+  text-align: center;
+
+  margin: auto;
+}
+
+#writerPic{
+  /* grid-column-start: 2;
+  grid-row-start: 1;
+  grid-column-end: 2;
+  background-color: var(--white); */
+
+  padding-top: 5%;
+  padding-bottom: 5%;
+  text-align: center;
+
+
+}
+
+
+
+#smallHeader {
+  background-image: url(InkBgSmall.svg);
+  height: 10vh;
+  width: 1000px;
+  max-width: 2000px;
+  background-size: cover;
+  background-color: var(--light-tone);
+  background-repeat: no-repeat;
 
 }
 
@@ -103,28 +261,108 @@ nav{
   right: 16px;
 }
 
+/* footer */
 
-h2{
-  color: var(--dark-tone);
-  font-family: Arial, Helvetica, sans-serif;
+footer{
+  background-color: var(--dark-tone);
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+}
+
+#bottomLogo {
   padding-left: 60px;
+  max-width: 400px;
+  min-width: 150px;
+}
+
+
+
+
+
+
+
+
+/* Story Page */
+
+#storyPgGrid{
+  display: grid;
+  grid-template-columns: 25vw 1fr 1fr 1fr 1fr;
+}
+
+#characters{
+  grid-column-start: 2;
+  grid-column-end: 5;
+  min-width: 200%;
 
 }
 
-h3{
+
+/* Chapter Page */
+
+#chapters{
+  grid-column-start: 2;
+  grid-column-end: 5;
+  min-width: 200%;
+
+}
+
+/* Notes Page */
+
+#notes{
+  grid-column-start: 2;
+  grid-column-end: 5;
+  min-width: 200%;
+
+}
+
+/* sidebar */
+
+#storySidebar{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  background-color: var(--highlight-color);
+  width: 20vw;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.tabs{
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 20vw;
+}
+
+#storySidebar button{
+ background-color: inherit;
+  float: left;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#storySidebar button:hover{
+  background-color: var(--dark-blue);
+  color: var(--white);
+}
+
+#storySidebar button.active{
+  background-color: var(--white);
   color: var(--highlight-color);
-  font-family: Arial, Helvetica, sans-serif;
-  padding-left: 60px;
+}
+
+.tabContent{
+  display: none;
+  padding: 6px 12px;
 
 }
 
-p{
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--dark-tone);
-  padding-left: 60px;
-  max-width: 600px;
-  text-align: justify;
-}
+
+
 
 
 label {
@@ -172,6 +410,9 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
 }
 
@@ -180,20 +421,90 @@ input[type=submit]:hover {
   color: var(--highlight-color);
 }
 
-h5{
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--highlight-color);
-}
+
 
 .contactForm {
+text-align: center;
 
-  background-color: var(--light-tone);
-  padding: 20px;
+
+
+}
+
+#contactMe{
+  text-align: center;
+  padding: 0%;
+}
+
+/* a:hover {
+  filter: brightness(-20);
+} */
+
+
+
+
+
+@media (min-width: 650px) {
+  nav > .hMenu {
+    display: none;
+  }
+
+  nav > .hamburgerMenu {
+    display: none;
+  }
+
 
 }
 
 
-@media (max-width:550px){
+@media only screen and (max-width:650px){
+
+  #hiddenMobile{
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow:
+        0 10px 27px rgba(0, 0, 0, 0.05);
+}
+
+  #hiddenMobile .active{
+    left: 0;
+  }
+
+  .mobile{
+    margin: 2.5rem 0;
+  }
+
+  .hamburgerMenu{
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburgerMenu.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburgerMenu.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburgerMenu.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+
+
+@media (max-width:650px){
+
+  /* .topNav #hidden--mobile{
+    display: none;
+  } */
+
 
   #lrgHeader {
     background-image: url(InkBg.svg);
@@ -244,16 +555,37 @@ h5{
     display: none;
   }
 
+
   nav{
     padding-bottom: 50px;
+
+
+
   }
 
-}
-
-@media (min-width: 550px) {
-  nav > .fa-bars {
+  #lrgHeader {
     display: none;
   }
 
+  #welcomeLogo{
+    min-width: 100%;
+    padding-left: 50%;
+    padding-right: 50%;
+    padding-bottom: 50%;
+  }
+
+  #welcomeSH{
+    display: none;
+    color: var(--dark-tone);
+    text-align: center;
+
+
+  }
+
+  .hamburgerMenu{
+    display: block;
+  }
 
 }
+
+
