--- a/style.css
+++ b/style.css
@@ -299,6 +299,35 @@ footer{
 
 /* Story Page */
 
+/* scroll bar */
+
+div.tableScroll{
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+   margin: 50%, 50%;
+  padding: 4px;
+  background-color: var(--light-tone);
+  width: 75%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+td{
+  width: 25%;
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  flex: 0 0 auto;
+}
+
+th{
+color: var(--highlight-color);
+width: 25%;
+font-family: Arial, Helvetica, sans-serif;
+
+}
+
 #storyPgGrid{
   display: grid;
   grid-template-columns: 25vw 1fr 1fr 1fr 1fr;
