--- a/style.css
+++ b/style.css
@@ -303,28 +303,50 @@ footer{
 
 div.tableScroll{
   display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-   margin: 50%, 50%;
-  padding: 4px;
   background-color: var(--light-tone);
-  width: 75%;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
+    border: 1px solid var(--dark-blue);
+    border-radius: 4px 0 4px 0;
+    color: #3B3C3E;
+    font-size: 12px;
+    font-weight: bold;
+    left: -1px;
+    padding: 10px 7px 5px;
+
+    max-width: 600px;
+    max-height: 600px;
+    overflow:scroll;
+    overflow-y:scroll;
 }
 
 td{
-  width: 25%;
+  max-width: 100px;
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  flex: 0 0 auto;
+  padding-left: 30px;
+padding-right: 30px;
+padding-top: 10px;
+padding-bottom: 10px;
+}
+
+tr{
+  max-width: 100px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   flex: 0 0 auto;
 }
 
 th{
-color: var(--highlight-color);
-width: 25%;
+color: var(--white);
+max-width: 100px;
 font-family: Arial, Helvetica, sans-serif;
+text-align: left;
+flex: 0 0 auto;
+padding-left: 30px;
+padding-right: 30px;
+padding-top: 10px;
+padding-bottom: 10px;
+background-color: var(--highlight-color);
 
 }
 
