--- a/style.css
+++ b/style.css
@@ -470,12 +470,12 @@ background-color: inherit;
 }
 
 .storySidebar button:hover{
-  background-color: var(--dark-blue);
-  color: var(--white);
+  background-color: var(--dark-tone);
+  color: var(--highlight-color);
 }
 
 .storySidebar button.active{
-  background-color: var(--dark-blue);
+  background-color: var(--dark-tone);
   color: var(--white)
 }
 
@@ -589,15 +589,26 @@ input[type=text], select, textarea {
   width: 60vw;
 }
 
+#phone{
+  width: 60vw;
+}
+
+#buttonS{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 input[type=tel], select, textarea {
-  width: 50%;
+  width: 100%;
   padding: 12px;
   border: 1px solid var(--highlight-color);
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
-  resize: vertical
+  resize: vertical;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 input[type=email], select, textarea {
@@ -631,6 +642,54 @@ input[type=submit]:hover {
 }
 
 
+#fs-frm-inputs{
+  background-color: var(--dark-tone);
+  max-width: 25%;
+border: none;
+
+margin-left: auto;
+margin-right: auto;
+
+}
+
+.blueDiv{
+background-color: var(--highlight-color);
+
+}
+
+.fFields{
+background-color: var(--dark-tone);
+font-family: Arial, Helvetica, sans-serif;
+color: var(--highlight-color);
+margin-left: 15px;
+margin-right: 15px;
+}
+
+.fHeadings{
+  color: var(--highlight-color);
+
+}
+
+.fa-brands{
+  color: var(--highlight-color);
+  width: 4vw;
+font-size: 200%;
+text-decoration: none;
+}
+
+.centeredBlack{
+  grid-column-start: 2;
+  grid-row-start: 2;
+  background-color: var(--dark-tone);
+  padding-bottom: 70px;
+  /* padding-top: 50px; */
+  width: 75vw;
+  /* position: ; */
+  text-align: center;
+
+  margin: auto;
+}
+
 
 
 
@@ -643,7 +702,8 @@ text-align: center;
 
 #contactMe{
   text-align: center;
-  padding: 0%;
+  padding: 1%;
+  color: var(--dark-tone);
 }
 
 /* a:hover {
