--- a/style.css
+++ b/style.css
@@ -139,11 +139,25 @@ hr{
 .topNav {
   background-color: var(--dark-tone);
   overflow: hidden;
-  /* padding-top: 30px;
-  padding-bottom: 30px; */
 
 
 
+}
+
+nav{
+  background-color: var(--dark-tone);
+  overflow: hidden;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin: auto;
+  z-index: 2;
+  border-bottom: solid var(--dark-blue) 2px;
+}
+
+body{
+  padding-top: 100px;
 }
 
 /* .hMenu{
