--- a/style.css
+++ b/style.css
@@ -134,6 +134,78 @@ hr{
   color: var(--white);
 }
 
+/* photo carousel ===============================================================================*/
+
+.item-list{
+  max-width: 50vw;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  scroll-behavior: smooth;
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+  margin-left: auto;
+  margin-right: auto;
+
+  gap: 40px;
+}
+
+.item{
+  scroll-snap-align: center;
+  width: 30vw
+}
+
+#prev-btn{
+  border: none;
+  cursor: pointer;
+  color: var(--dark-tone);
+  background: none;
+  background-color: none;
+  transition: all .3s ease-in-out;
+  width: 4vw;
+font-size: 200%;
+padding-top: 15px;
+}
+
+#prev-btn:hover{
+
+  color: var(--highlight-color);
+  font-size: 220%;
+
+}
+
+#next-btn{
+  border: none;
+  cursor: pointer;
+  color: var(--dark-tone);
+  background: none;
+  background-color: none;
+  transition: all .3s ease-in-out;
+  width: 4vw;
+font-size: 200%;
+padding-top: 15px;
+}
+
+#next-btn:hover{
+
+  color: var(--highlight-color);
+  font-size: 220%;
+
+}
+
+
+.item-list::-webkit-scrollbar {
+  display: none;
+}
+
+
+.item-list {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
+
 /* Nav bar ===================================================================================== */
 
 .topNav {
@@ -157,7 +229,7 @@ nav{
 }
 
 body{
-  padding-top: 100px;
+  padding-top: 95px;
 }
 
 /* .hMenu{
